--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -56,34 +56,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
+    "    if (sorted(str(word_a).lower()) == (sorted(str(word_b).lower()))):\n",
+    "      #converting the parameter into string to change to lower case before sorting to determine the match\n",
+    "      return \"True\"\n",
+    "    else:\n",
+    "       return \"False\"\n",
     "\n",
     "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Slient\", \"listen\")"
+    "anagram_checker(\"Silent\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'False'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "anagram_checker(\"Slient\", \"Night\")"
+    "def anagram_checker(word_a, word_b):\n",
+    "    if (sorted(str(word_a).lower()) == (sorted(str(word_b).lower()))):\n",
+    "      #converting the parameter into string to change to lower case before sorting to determine the match\n",
+    "      return \"True\"\n",
+    "    else:\n",
+    "       return \"False\"\n",
+    "\n",
+    "\n",
+    "# Run your code to check using the words below:\n",
+    "anagram_checker(\"Silent\".lower(), \"Night\".lower())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "anagram_checker(\"night\", \"Thing\")"
+    "def anagram_checker(word_a, word_b):\n",
+    "    if (sorted(str(word_a).lower()) == (sorted(str(word_b).lower()))):\n",
+    "      #converting the parameter into string to change to lower case before sorting to determine the match\n",
+    "      return \"True\"\n",
+    "    else:\n",
+    "       return \"False\"\n",
+    "\n",
+    "\n",
+    "# Run your code to check using the words below:\n",
+    "anagram_checker(\"night\".lower(), \"thing\".lower())"
    ]
   },
   {
@@ -97,23 +151,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "#true is if you care about something is upper case\n",
+    "#false is if you don't care \n",
     "\n",
+    "def anagram_checker(word_a, word_b,is_case_sensitive):\n",
+    "  if is_case_sensitive==True: # checking for anagram but caring about the upper case/lower case\n",
+    "    return print(sorted(word_a) == sorted(word_b))\n",
+    "  elif is_case_sensitive==False:# checking for anagram but doesn't care about the upper case/lower case\n",
+    "    return print(sorted(str(word_a).lower()) == (sorted(str(word_b).lower())))\n",
+    "\n",
+    "      \n",
     "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Slient\", \"listen\", False) # True"
+    "anagram_checker(\"Silent\", \"listen\",False)# True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
+    "def anagram_checker(word_a, word_b,is_case_sensitive):\n",
+    "  if is_case_sensitive==True: # checking for anagram but caring about the upper case/lower case\n",
+    "    return print(sorted(word_a) == sorted(word_b))\n",
+    "  elif is_case_sensitive==False:# checking for anagram but doesn't care about the upper case/lower case\n",
+    "    return print(sorted(str(word_a).lower()) == (sorted(str(word_b).lower())))\n",
+    "\n",
     "anagram_checker(\"Slient\", \"Listen\", True) # False"
    ]
   },
@@ -144,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
