Final assignment changes

--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -191,6 +191,9 @@
     }
    ],
    "source": [
+    "#true is if you care about something is upper case\n",
+    "#false is if you don't care \n",
+    "\n",
     "def anagram_checker(word_a, word_b,is_case_sensitive):\n",
     "  if is_case_sensitive==True: # checking for anagram but caring about the upper case/lower case\n",
     "    return print(sorted(word_a) == sorted(word_b))\n",
