--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -354,6 +354,7 @@
       "source": [
         "# Run this cell so you can use this helper function\n",
         "\n",
+        "\n",
         "def check_zeros(x):\n",
         "    '''\n",
         "    Given an array, x, check whether any values in x equal 0.\n",
@@ -392,10 +393,11 @@
         "]\n",
         "\n",
         "data_mean = patient_summary('../05_data/assignment_2_data/inflammation_01.csv','mean')\n",
-        "print(len(data_mean))\n",
+        "print(len(data_mean)) #calling mean data from previous question\n",
         "\n",
         "def detect_problems(file_path):\n",
-        "  check_zeros(print(len(data_mean)))\n",
+        "  check_zeros(print(len(data_mean))) #checking to determine if any of the means are 0\n",
+        "\n",
         "# use the function you created in part 2 - to get the means are 0 - one line of code. f\n",
         "  return "
       ]
